syntax = "proto3";

package hrms;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "hrms/proto";

// PerformanceReviewService defines the gRPC methods for managing performance reviews.
service PerformanceReviewService {
  rpc CreatePerformanceReview (CreatePerformanceReviewRequest) returns (PerformanceReviewResponse);
  rpc GetPerformanceReviewByID (GetPerformanceReviewRequest) returns (PerformanceReviewResponse);
  rpc ListPerformanceReviews (ListPerformanceReviewsRequest) returns (ListPerformanceReviewsResponse);
  rpc UpdatePerformanceReview (UpdatePerformanceReviewRequest) returns (google.protobuf.Empty);
  rpc DeletePerformanceReview (DeletePerformanceReviewRequest) returns (google.protobuf.Empty);
}

// DTOs and Requests
message PerformanceReview {
  uint64 id = 1;
  uint64 employee_id = 2;
  uint64 reviewer_id = 3;
  google.protobuf.Timestamp review_date = 4;
  string review_period = 5;
  int32 overall_rating = 6;
  string feedback = 7;
  bool promotion = 8;
  repeated PerformanceKPI kpis = 9;
  repeated SkillDevelopment skills = 10;
}

message PerformanceKPI {
  uint64 id = 1;
  uint64 review_id = 2;
  string kpi_name = 3;
  float score = 4;
  string comments = 5;
}

message SkillDevelopment {
  uint64 id = 1;
  uint64 review_id = 2;
  string skill = 3;
  string progress = 4;
}

message CreatePerformanceReviewRequest {
  uint64 employee_id = 1;
  uint64 reviewer_id = 2;
  google.protobuf.Timestamp review_date = 3;
  string review_period = 4;
  int32 overall_rating = 5;
  string feedback = 6;
  bool promotion = 7;
  repeated PerformanceKPI kpis = 8;
  repeated SkillDevelopment skills = 9;
}

message PerformanceReviewResponse {
  PerformanceReview review = 1;
}

message GetPerformanceReviewRequest {
  uint64 review_id = 1;
}

message ListPerformanceReviewsRequest {
  uint64 employee_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message ListPerformanceReviewsResponse {
  repeated PerformanceReview reviews = 1;
  int64 total_count = 2;
}

message UpdatePerformanceReviewRequest {
  uint64 review_id = 1;
  map<string, google.protobuf.Value> updates = 2;
}

message DeletePerformanceReviewRequest {
  uint64 review_id = 1;
}
